# Interactive-RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  blog.md  chunk.md  docker-compose.yml  implementation.md  pyproject.toml  rag.md  requirements.txt  score-fusion.md
rag/: app.py  bot.py  params.py  utils.py  vector_search.py
rag/static/: script.js  styles.css
rag/templates/: index.html
